--- a/Frontend/user/equipments.html
+++ b/Frontend/user/equipments.html
@@ -141,7 +141,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // --- API Configuration ---
-        const API_BASE_URL = 'http://localhost:8080'; 
+        const API_BASE_URL = 'http://gym-7jsc.onrender.com'; 
         const EQUIPMENT_ENDPOINT = '/api/equipment'; 
         
         // --- Utility Functions ---
