--- a/Frontend/admin/plans.html
+++ b/Frontend/admin/plans.html
@@ -250,7 +250,7 @@
         });
         // --- End Mobile Sidebar Toggle Script ---
 
-        const API_URL = "http://localhost:8080/api/membership"; 
+        const API_URL = "https://gym-7jsc.onrender.com/api/membership"; 
         const token = localStorage.getItem("token");
         const BASE_URL = "http://localhost:8080"; // Base URL for resolving static assets
 
