--- a/Frontend/admin/trainers.html
+++ b/Frontend/admin/trainers.html
@@ -249,7 +249,7 @@
 
 
         // Base URL for the API and static content (images)
-        const BASE_URL = "http://localhost:8080";
+        const BASE_URL = "https://gym-7jsc.onrender.com";
         const API_URL = `${BASE_URL}/api/trainers`;
         const token = localStorage.getItem("token");
 
