--- a/Frontend/admin/equipments.html
+++ b/Frontend/admin/equipments.html
@@ -225,7 +225,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
-        const API_URL = "https://gym-7jsc.onrender.com/api/equipment";
+        const API_URL = "https://gym-application-spring-boot.onrender.com/api/equipment";
         const token = localStorage.getItem("token");
 
         const form = document.getElementById("equipmentForm");
