--- a/Frontend/admin/index.html
+++ b/Frontend/admin/index.html
@@ -152,7 +152,7 @@
         
         <ul class="nav flex-column mb-auto">
             <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="dashboard.html">
+                <a class="nav-link active" aria-current="page" href="index.html">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
                 </a>
             </li>
