--- a/Frontend/admin/plans.html
+++ b/Frontend/admin/plans.html
@@ -123,7 +123,7 @@
         
         <ul class="nav flex-column mb-auto">
             <li class="nav-item">
-                <a class="nav-link" href="dashboard.html">
+                <a class="nav-link" href="index.html">
                     <i class="fas fa-tachometer-alt"></i> Dashboard
                 </a>
             </li>
