--- a/Frontend/admin/equipments.html
+++ b/Frontend/admin/equipments.html
@@ -124,7 +124,7 @@
     
     <div class="sidebar d-flex flex-column" id="gymSidebar">
         <div class="sidebar-header">
-            <a class="navbar-brand text-white fs-4" href="dashboard.html">
+            <a class="navbar-brand text-white fs-4" href="index.html">
                 <i class="fas fa-dumbbell"></i> Gym Admin Hub
             </a>
             <button class="btn btn-close btn-close-white d-lg-none position-absolute top-0 end-0 m-2" aria-label="Close" id="closeSidebarBtn"></button>
@@ -133,7 +133,7 @@
         <ul class="nav flex-column mb-auto">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-tachometer-alt"></i> Dashboard
+                    <i class="fas fa-tachometer-alt"></i> index
                 </a>
             </li>
             <li class="nav-item">
@@ -164,7 +164,7 @@
     <div class="main-content">
         <div class="mobile-header d-lg-none">
         
-                <a class="navbar-brand text-black fs-4 **d-flex align-items-center**" href="dashboard.html">
+                <a class="navbar-brand text-black fs-4 **d-flex align-items-center**" href="index.html">
                     <i class="fas fa-dumbbell"> G y m  -  H u b</i>
                 </a>
 
