Change sidebar link from dashboard to index

--- a/Frontend/admin/index.html
+++ b/Frontend/admin/index.html
@@ -144,7 +144,7 @@
     
     <div class="sidebar d-flex flex-column" id="gymSidebar">
         <div class="sidebar-header">
-            <a class="navbar-brand text-white fs-4" href="dashboard.html">
+            <a class="navbar-brand text-white fs-4" href="index.html">
                 <i class="fas fa-dumbbell"></i> Gym Admin Hub
             </a>
             <button class="btn btn-close btn-close-white d-lg-none position-absolute top-0 end-0 m-2" aria-label="Close" id="closeSidebarBtn"></button>
