--- a/Frontend/admin/equipments.html
+++ b/Frontend/admin/equipments.html
@@ -133,7 +133,7 @@
         <ul class="nav flex-column mb-auto">
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <i class="fas fa-tachometer-alt"></i> index
+                    <i class="fas fa-tachometer-alt"></i> Dashboard
                 </a>
             </li>
             <li class="nav-item">
