--- a/Frontend/admin/plans.html
+++ b/Frontend/admin/plans.html
@@ -154,7 +154,7 @@
     
     <div class="main-content">
         <div class="mobile-header d-lg-none">
-            <a class="navbar-brand text-black fs-4 **d-flex align-items-center**" href="dashboard.html">
+            <a class="navbar-brand text-black fs-4 **d-flex align-items-center**" href="index.html">
                     <i class="fas fa-dumbbell"> G y m  -  H u b</i>
                 </a>
             <button class="btn btn-primary" id="openSidebarBtn">
