--- a/Frontend/admin/trainers.html
+++ b/Frontend/admin/trainers.html
@@ -115,7 +115,7 @@
     
     <div class="sidebar d-flex flex-column" id="gymSidebar">
         <div class="sidebar-header">
-            <a class="navbar-brand text-white fs-4" href="dashboard.html">
+            <a class="navbar-brand text-white fs-4" href="index.html">
                 <i class="fas fa-dumbbell"></i> Gym Admin Hub
             </a>
             <button class="btn btn-close btn-close-white d-lg-none position-absolute top-0 end-0 m-2" aria-label="Close" id="closeSidebarBtn"></button>
@@ -154,7 +154,7 @@
     
     <div class="main-content">
         <div class="mobile-header d-lg-none">
-            <a class="navbar-brand text-black fs-4 **d-flex align-items-center**" href="dashboard.html">
+            <a class="navbar-brand text-black fs-4 **d-flex align-items-center**" href="index.html">
                     <i class="fas fa-dumbbell"> G y m  -  H u b</i>
                 </a>
             <button class="btn btn-primary" id="openSidebarBtn">
