--- a/Frontend/user/memberships.html
+++ b/Frontend/user/memberships.html
@@ -156,7 +156,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
         // --- API Configuration ---
-        const API_BASE_URL = 'http://gym-7jsc.onrender.com';
+        const API_BASE_URL = 'https://gym-application-spring-boot.onrender.com';
         const MEMBERSHIP_ENDPOINT = '/api/membership';
         
         // --- Utility Functions ---
