--- a/Frontend/admin/plans.html
+++ b/Frontend/admin/plans.html
@@ -252,7 +252,7 @@
 
         const API_URL = "https://gym-application-spring-boot.onrender.com/api/membership"; 
         const token = localStorage.getItem("token");
-        const BASE_URL = "http://localhost:8080"; // Base URL for resolving static assets
+        const BASE_URL = "https://gym-application-spring-boot.onrender.com";// Base URL for resolving static assets
 
         const form = document.getElementById("planForm");
         const formTitle = document.getElementById("formTitle");
@@ -274,12 +274,13 @@
         }
 
         // --- IMAGE URL RESOLUTION FUNCTION (FIXED) ---
-       function getFullImageUrl(imagePath) {
+ function getFullImageUrl(imagePath) {
     if (imagePath && !imagePath.startsWith("http")) {
-        return `${BASE_URL}/uploads/${imagePath}`;
+        return `${BASE_URL}/images/${imagePath}`;
     }
     return imagePath;
 }
+
 
         
         
