--- a/Frontend/admin/equipments.html
+++ b/Frontend/admin/equipments.html
@@ -225,6 +225,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script>
+        const BASE_URL = "https://gym-application-spring-boot.onrender.com";
         const API_URL = "https://gym-application-spring-boot.onrender.com/api/equipment";
         const token = localStorage.getItem("token");
 
@@ -292,9 +293,10 @@
                     const row = document.createElement('tr');
 
                     // Conditional rendering for the image column
-                    const imageCellContent = e.imageUrl 
-                        ? `<img src="${e.imageUrl}" alt="${e.name}" style="height: 50px; width: auto; object-fit: cover; border-radius: 4px;">`
-                        : `<span class="text-muted fst-italic">No Image</span>`;
+                   const imageCellContent = e.imageUrl
+    ? `<img src="${getFullImageUrl(e.imageUrl)}" alt="${e.name}" style="height: 50px; width: auto; object-fit: cover; border-radius: 4px;">`
+    : `<span class="text-muted fst-italic">No Image</span>`;
+
                     
                     // Populate the row content
                     row.innerHTML = `
